<resources>
    <string name="app_name">Today Newspaper</string>
    <string name="title_activity_location">Location</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="trips">Trips</string>
    <string name="settings">Settings</string>
    <string name="subcriber">Subcriber</string>
    <string name="news_paper">News Paper</string>
    <string name="rides">Rides</string>
    <string name="map">Map</string>
</resources>